--- a/node-http/package.json
+++ b/node-http/package.json
@@ -1,12 +1,12 @@
 {
   "name": "node-http",
   "version": "1.0.0",
-  "description": "Simple Node Examples",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start":"node index"
   },
-  "author": "Jogesh Muppala",
+  "author": "AlrexZ",
   "license": "ISC"
 }
